# whenwx

./: .gitignore  README.md
.github/workflows/: deploy-frontend.yml  process-forecast.yml
api/: Dockerfile  entrypoint.sh  fly.toml  pyproject.toml  requirements.txt
api/src/: __init__.py  config.py  main.py  on_demand.py  variables.py
api/src/middleware/: __init__.py  rate_limit.py
api/src/plugins/: __init__.py  weather_router.py
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py  check_new_data.py  config.py  main.py
backend/src/pipeline/: __init__.py  export.py  ingest.py
backend/src/processors/: __init__.py  base.py  temperature.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/public/: 404.html  CNAME
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AnimatedBackground.css  AnimatedBackground.tsx  EventSelector.css  EventSelector.tsx  ForecastChart.css  ForecastChart.tsx  LocationInput.css  LocationInput.tsx  ResultsModule.css  ResultsModule.tsx  ThresholdBuilder.css  ThresholdBuilder.tsx
frontend/src/config/: events.ts  variables.ts
frontend/src/hooks/: useGeocoding.ts  useGeolocation.ts  useWeatherQuery.ts
frontend/src/pages/: Home.css  Home.tsx  Results.css  Results.tsx
frontend/src/types/: weather.ts
