[project]
name = "whenwx-api"
version = "0.1.0"
description = "WhenWX API - Weather event timing queries"
requires-python = ">=3.11"
dependencies = [
    "xpublish>=0.4.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "xarray>=2024.1.0",
    "zarr>=2.18.0",
    "gcsfs>=2024.1.0",
    "fsspec>=2024.1.0",
    "slowapi>=0.1.9",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "timezonefinder>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
