[project]
name = "whenwx-backend"
version = "0.1.0"
description = "WhenWX Backend - Weather forecast processing"
requires-python = ">=3.11"
dependencies = [
    "arraylake>=0.10.0",
    "xarray>=2024.1.0",
    "zarr>=2.18.0",
    "gcsfs>=2024.1.0",
    "fsspec>=2024.1.0",
    "numpy>=1.26.0",
    "dask>=2024.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "rechunker>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
